<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="84dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/new_logo_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:progressTint="@color/progressbar"
            android:indeterminateTint="@color/fnt_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_contador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:padding="15dp"
                android:backgroundTint="@color/btn_off"
                android:textColor="@color/btn_text"
                android:text="@string/btn_contador" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="77dp"
                app:srcCompat="@drawable/fastfinger" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/fnt_color"
            android:textSize="35sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>